IrshadDev/src/objects/GeWS_WebService_Integration_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store Web Service Integration Settings</description>
    <fields>
        <fullName>GeWS_Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_IntegrationCredentialIdentifier__c</fullName>
        <label>Integration Credential Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_Timeout__c</fullName>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeWS_User_Agent__c</fullName>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WebService Integration Settings</label>
</CustomObject>